fix: get image original size to avoid flickering

--- a/src/components/ImageContainer.scss
+++ b/src/components/ImageContainer.scss
@@ -2,11 +2,25 @@
     display: flex;
     border-radius: 13px;
     overflow: hidden;
+    background-image: url('../../public/images/loading.gif');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #f5f5f5;
     .image {
         width: 100%;
         height: auto;
+        opacity: 1;
+        transition: opacity 500ms ease 0ms;
         &.loading {
-            display: none;
+            opacity: 0;
+        }
+    }
+    &.dark {
+        background-image: url('../../public/images/loading-dark.gif');
+        background-color: #424242;
+        .image {
+            filter: brightness(0.8);
         }
     }
 }
